--- a/apps/static/custom/css/style.css
+++ b/apps/static/custom/css/style.css
@@ -243,6 +243,13 @@ select {
   margin: 5px;
 }
 
+table {
+ margin: 5px;
+}
+input {
+  margin: 5px;
+}
+
 .tool-form{
   justify-content: center;
 }
