--- a/apps/templates/pages/tool/includes/NSPTDetails.html
+++ b/apps/templates/pages/tool/includes/NSPTDetails.html
@@ -59,15 +59,177 @@
                     consolidated (NC). <br>
                     \(C_{N} = \frac{3}{2+\sigma'_{v0}(TSF)} \) For Overconsolidated (OE) soil. <br>
                 </ol>
-                <div class="card-header">
-                    <img class="img" width= "100%"src="{% static "assets/img/nsptmore_1.png" %}">
+                <div class="table-responsive">
+                    <table class="table text-center"  >
+                        <caption>Table 1: Summery of typical rod energy ratios</caption>
+                    <thead>
+                      <tr>
+                        <th >Country</th>
+                        <th >Hammer Type</th>
+                        <th >Hammer Release</th>
+                        <th >E<sub>m</sub>(%)</th>
+                        <th >C<sub>ER</sub></th>
+                      </tr>
+                    </thead>
+                      <tbody>
+                        <tr>
+                          <td rowspan = "2">Japan</td>
+                          <td>Donut</td>
+                          <td>Free fall</td>
+                          <td>78</td>
+                          <td>1.30</td>
+                        </tr>
+                        <tr>
+                            <td>Donut</td>
+                            <td>Rope and pulley</td>
+                            <td>67</td>
+                            <td>1.12</td>
+                        </tr>
+                        <tr>
+                            <td rowspan = "2">United States</td>
+                            <td>Safety</td>
+                            <td>Rope and pulley</td>
+                            <td>60</td>
+                            <td>1.00</td>
+                          </tr>
+                          <tr>
+                              <td>Donut</td>
+                              <td>Rope and pulley</td>
+                              <td>45</td>
+                              <td>0.75</td>
+                          </tr>
+                          <tr>
+                            <td rowspan = "2">Argentina</td>
+                            <td>Donut</td>
+                            <td>Rope and pulley</td>
+                            <td>45</td>
+                            <td>0.75</td>
+                          </tr>
+                          <tr>
+                              <td>Donut</td>
+                              <td>Free fall</td>
+                              <td>60</td>
+                              <td>1.00</td>
+                          </tr>
+                          <tr>
+                            <td >China</td>
+                            <td>Donut</td>
+                            <td>Rope and pulley</td>
+                            <td>50</td>
+                            <td>0.83</td>
+                          </tr>
+                          <tr>
+                            <td >UAE</td>
+                            <td>Automatic</td>
+                            <td>Free fall</td>
+                            <td>75</td>
+                            <td>1.25</td>
+                          </tr>
+                      </tbody>
+                    </table>
                 </div>
             </div>
             <div class="col-md-5 ml-auto mr-auto">
                 <img class="img" src="{% static "assets/img/Picture1.png" %}"><br><br>
-                <img class="img" src="{% static "assets/img/nsptmore_2.png" %}"><br><br>
-                <img class="img" src="{% static "assets/img/nsptmore_3.png" %}"><br><br>
-                <img class="img" src="{% static "assets/img/nsptmore_4.png" %}">
+                <div class="table-responsive">
+                    <table class="table text-center"  >
+                        <caption>Table 2: Rod Length Correction, C<sub>RL</sub> </caption>
+                    <thead>
+                      <tr>
+                        <th colspan = "2">Rod Length</th>
+                        <th rowspan = "2">C<sub>R</sub></th>
+                      </tr>
+                      <tr>
+                        <th>(m)</th>
+                        <th>(ft)</th>
+                      </tr>
+                    </thead>
+                      <tbody>
+                        <tr>
+                          <td >3 - 4</td>
+                          <td>10 - 13</td>
+                          <td>0.75</td>
+                        </tr>
+                        <tr>
+                            <td >4 - 6</td>
+                            <td>13 - 20</td>
+                            <td>0.85</td>
+                        </tr>
+                        <tr>
+                            <td >6 - 10</td>
+                            <td>20 - 30</td>
+                            <td>0.95</td>
+                        </tr>
+                        <tr>
+                            <td >> 10</td>
+                            <td>> 30</td>
+                            <td>1.00</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+                <div class="table-responsive">
+                    <table class="table text-center"  >
+                        <caption>Table 3: Sampling Method Correction, C<sub>s</sub> </caption>
+                    <thead>
+                      <tr>
+                        <th >Method</th>
+                        <th >C<sub>s</sub></th>
+                      </tr>
+                    </thead>
+                      <tbody>
+                        <tr>
+                          <td >Sampler without liner(most common)</td>
+                          <td>1.2</td>
+                        </tr>
+                        <tr>
+                            <td >Standard Sampler</td>
+                            <td>1.0</td>
+                        </tr>
+                        <tr>
+                            <td >With liner for loose sand</td>
+                            <td>0.9</td>
+                        </tr>
+                        <tr>
+                            <td >With liner for dense sand and clay</td>
+                            <td>0.8</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+
+                <div class="table-responsive">
+                    <table class="table text-center"  >
+                        <caption>Table 4: Correction for Borehole Diameter, C<sub>B</sub> </caption>
+                    <thead>
+                      <tr>
+                        <th colspan = "2">Diameter</th>
+                        <th rowspan = "2">C<sub>B</sub></th>
+                      </tr>
+                      <tr>
+                        <th>(mm)</th>
+                        <th>(in)</th>
+                      </tr>
+                    </thead>
+                      <tbody>
+                        <tr>
+                          <td>65 - 115</td>
+                          <td>2.4 - 4.7</td>
+                          <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>150</td>
+                            <td>6</td>
+                            <td>1.05</td>
+                        </tr>
+                        <tr>
+                            <td >200</td>
+                            <td>8</td>
+                            <td>1.15</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
