--- a/apps/templates/pages/tool/index.html
+++ b/apps/templates/pages/tool/index.html
@@ -18,13 +18,13 @@
           <div class="col-lg-4 col-md-6">
             <ul class="nav nav-pills nav-pills-rose nav-pills-icons flex-column" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#link20" role="tablist">
+                <a class="nav-link active" data-toggle="tab" href="#link10" role="tablist">
                   <i class="material-icons">dashboard</i> About
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link21" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                <a class="nav-link" data-toggle="tab" href="#link11" role="tablist">
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
@@ -36,7 +36,7 @@
           </div>
           <div class="col-md-8">
             <div class="tab-content">
-              <div class="tab-pane active" id="link20">
+              <div class="tab-pane active" id="link10">
                 N-SPT values observed during testing are not utilized directly in the assessment
                 of soil properties. These values need to be corrected to account for hammer efficiency
                 , borehole diameter,sampling method, rod length and the overburden pressure.
@@ -45,26 +45,28 @@
                 corrected SPT numbers with depth.
 
               </div>
-              <div class="tab-pane" id="link21">
+              <div class="tab-pane" id="link11">
                 <p>Activated ags files</p>
-                <table border ="2px"  >
-                <thead>
-                  <tr class= "text-center">
-                    <th style="width: 50px;" >#</th>
-                    <th style="width: 100px;">project</th>
-                    <th style="width: 250px;">ags name</th>
-                  </tr>
-                </thead>
-                  <tbody>
-                    {% for file in nspt_activated %}
-                    <tr>
-                      <td class="text-center">{{ forloop.counter }} </td>
-                      <td>{{ file|first }}</td>
-                      <td>{{ file|slice:'1:'|first }}</td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table text-center"  >
+                    <thead>
+                      <tr>
+                        <th style="width: 50px;" >#</th>
+                        <th style="width: 100px;">project</th>
+                        <th style="width: 250px;">ags name</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for file in nspt_activated %}
+                      <tr>
+                        <td >{{ forloop.counter }} </td>
+                        <td>{{ file|first }}</td>
+                        <td>{{ file|slice:'1:'|first }}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -72,10 +74,11 @@
       </div>
     </div>
   </div>
+  
   <div class="col-md-6">
     <div class="card tool-summery">
       <div class="card-header ">
-        <h4 class="card-title">Bearing Capacity Calculator</h4>
+        <h4 class="card-title">Relative Density Tool</h4>
       </div>
       <div class="card-body ">
         <div class="row">
@@ -83,33 +86,57 @@
 
             <ul class="nav nav-pills nav-pills-rose nav-pills-icons flex-column" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#link110" role="tablist">
+                <a class="nav-link active" data-toggle="tab" href="#link20" role="tablist">
                   <i class="material-icons">dashboard</i> About
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link111" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                <a class="nav-link" data-toggle="tab" href="#link21" role="tablist">
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'bearingCapacity' %}" role="tablist">
-                  <i class="material-icons">timeline</i> Activate
+                <a class="nav-link" href="{% url 'RelativeDensity' %}" role="tablist">
+                  <i class="material-icons">timeline</i> Acrivate
                 </a>
               </li>
             </ul>
           </div>
           <div class="col-md-8">
             <div class="tab-content">
-              <div class="tab-pane active" id="link110">
-                Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C
-                users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI. Collaboratively
-                administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after
-                installed base benefits.
+              <div class="tab-pane active" id="link20">
+                One of the most important soil aggregate property is relative density.<br>
+                The relative density of soil is used to describe the state of compactness of
+                granular material and generally qualitatively described as very loose, loose,
+                medium dense, dense and very dense. It is defined as the ratio of difference of
+                void ratios in its loosest and densest state:<br>
+                Dr = (e<sub>max</sub> – e<sub>current</sub>)/(e<sub>max</sub> –e<sub>min</sub>).
+
               </div>
-              <div class="tab-pane" id="link111">
-                Efficiently unleash cross-media information without cross-media value. Quickly maximize timely
-                deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
+              <div class="tab-pane" id="link21">
+                <p>Activated ags files</p>
+                <div class="table-responsive">
+                  <table class="table text-center" >
+                    <thead>
+                      <tr>
+                        <th style="width: 50px;" >#</th>
+                        <th style="width: 50px;" >Method activated</th>
+                        <th style="width: 100px;">project</th>
+                        <th style="width: 250px;">ags name</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for file in RelativeDensity_activated %}
+                      <tr>
+                        <td>{{ forloop.counter }} </td>
+                        <td>{{ file|first }}</td>
+                        <td>{{ file|slice:'1:2'|first }}</td>
+                        <td>{{ file|slice:'2:'|first }}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -123,7 +150,7 @@
   <div class="col-md-6">
     <div class="card tool-summery">
       <div class="card-header ">
-        <h4 class="card-title">Relative Density Tool</h4>
+        <h4 class="card-title">Friction Angle Tool</h4>
       </div>
       <div class="card-body ">
         <div class="row">
@@ -137,74 +164,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link31" role="tablist">
-                  <i class="material-icons">schedule</i> Results
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'RelativeDensity' %}" role="tablist">
-                  <i class="material-icons">timeline</i> Acrivate
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-8">
-            <div class="tab-content">
-              <div class="tab-pane active" id="link30">
-                One of the most important soil aggregate property is relative density.<br>
-                The relative density of soil is used to describe the state of compactness of
-                granular material and generally qualitatively described as very loose, loose,
-                medium dense, dense and very dense. It is defined as the ratio of difference of
-                void ratios in its loosest and densest state:<br>
-                Dr = (e<sub>max</sub> – e<sub>current</sub>)/(e<sub>max</sub> –e<sub>min</sub>).
-
-              </div>
-              <div class="tab-pane" id="link31">
-                <p>Activated ags files</p>
-                <table border ="2px"  >
-                <thead>
-                  <tr class= "text-center">
-                    <th style="width: 50px;" >#</th>
-                    <th style="width: 50px;" >Method activated</th>
-                    <th style="width: 100px;">project</th>
-                    <th style="width: 250px;">ags name</th>
-                  </tr>
-                </thead>
-                  <tbody>
-                    {% for file in RelativeDensity_activated %}
-                    <tr>
-                      <td class="text-center">{{ forloop.counter }} </td>
-                      <td>{{ file|first }}</td>
-                      <td>{{ file|slice:'1:2'|first }}</td>
-                      <td>{{ file|slice:'2:'|first }}</td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="card tool-summery">
-      <div class="card-header ">
-        <h4 class="card-title">Friction Angle Tool</h4>
-      </div>
-      <div class="card-body ">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-
-            <ul class="nav nav-pills nav-pills-rose nav-pills-icons flex-column" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#link40" role="tablist">
-                  <i class="material-icons">dashboard</i> About
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link41" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
@@ -216,7 +176,7 @@
           </div>
           <div class="col-md-8">
             <div class="tab-content">
-              <div class="tab-pane active" id="link40">
+              <div class="tab-pane active" id="link30">
                 Friction angle together with cohesion define the shear strength parameters of soil. 
                 Its definition is derived from the Mohr-Coulomb failure criterion. It can be determined 
                 in the laboratory by direct shear test or triaxial tests or from theoretical correlations 
@@ -227,26 +187,28 @@
                 with depth. 
 
               </div>
-              <div class="tab-pane" id="link41">
+              <div class="tab-pane" id="link31">
                 <p>Activated ags files</p>
-                <table border ="2px"  >
-                <thead>
-                  <tr class= "text-center">
-                    <th style="width: 50px;" >#</th>
-                    <th style="width: 100px;">project</th>
-                    <th style="width: 250px;">ags name</th>
-                  </tr>
-                </thead>
-                  <tbody>
-                    {% for file in FractionAngle_activated %}
-                    <tr>
-                      <td class="text-center">{{ forloop.counter }} </td>
-                      <td>{{ file|first }}</td>
-                      <td>{{ file|slice:'1:'|first }}</td>
+                <div class="table-responsive">
+                  <table class="table text-center" >
+                  <thead>
+                    <tr >
+                      <th style="width: 50px;" >#</th>
+                      <th style="width: 100px;">project</th>
+                      <th style="width: 250px;">ags name</th>
                     </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
+                  </thead>
+                    <tbody>
+                      {% for file in FractionAngle_activated %}
+                      <tr >
+                        <td >{{ forloop.counter }} </td>
+                        <td>{{ file|first }}</td>
+                        <td>{{ file|slice:'1:'|first }}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
