New design changes

--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -34,7 +34,7 @@
   gtag('config', 'G-JY31PR7RZV');
 </script>
 
-  {% block stylesheets %}{% endblock stylesheets %}
+  {% block stylesheets %}{% endblock %}
   
 </head>
 
