--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="mb-5">Check my latest blogposts</h3>
+          <h3 class="mb-5">Check our tools</h3>
         </div>
       </div>
       <div class="row">
@@ -27,19 +27,20 @@
           <div class="card card-plain">
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/bg-tool.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy">
+                <img src="/static/assets-landing/img/file.jpg" alt="img-blur-shadow"
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
               </a>
             </div>
             <div class="card-body px-0">
               <h5>
-                <a href="javascript:;" class="text-dark font-weight-bold">Rover raised $65 million</a>
+                <a href="#" class="text-dark font-weight-bold">Ags file Validator</a>
               </h5>
               <p>
-                Finding temporary housing for your dog should be as easy as
-                renting an Airbnb. That’s the idea behind Rover ...
+                Get useful insights on your
+                geodata files or the files
+                you received.
               </p>
-              <a href="javascript:;" class="text-info text-sm icon-move-right">Read More
+              <a href="#" class="text-info text-sm icon-move-right">Read More
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -49,19 +50,24 @@
           <div class="card card-plain">
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/bg-tool.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy">
+                <img src="/static/assets-landing/img/excel.png" alt="img-blur-shadow"
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
               </a>
             </div>
             <div class="card-body px-0">
               <h5>
-                <a href="javascript:;" class="text-dark font-weight-bold">MateLabs machine learning</a>
+                <a href="#" class="text-dark font-weight-bold">Convert
+                  Ags
+                  to excel</a>
               </h5>
               <p>
-                If you’ve ever wanted to train a machine learning model
-                and integrate it with IFTTT, you now can with ...
+                Convert with a click of a
+                button your geodata files
+                (.
+                ags
+                format) to excel
               </p>
-              <a href="javascript:;" class="text-info text-sm icon-move-right">Read More
+              <a href="#" class="text-info text-sm icon-move-right">Read More
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -71,41 +77,18 @@
           <div class="card card-plain">
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/bg-tool.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy">
+                <img src="/static/assets-landing/img/geo.jpg" alt="img-blur-shadow"
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
               </a>
             </div>
             <div class="card-body px-0">
               <h5>
-                <a href="javascript:;" class="text-dark font-weight-bold">MateLabs machine learning</a>
+                <a href="#" class="text-dark font-weight-bold">Geodata platform</a>
               </h5>
               <p>
-                If you’ve ever wanted to train a machine learning model
-                and integrate it with IFTTT, you now can with ...
+                Exlore your data, manage and decode in few minutes
               </p>
-              <a href="javascript:;" class="text-info text-sm icon-move-right">Read More
-                <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <div class="card card-plain">
-            <div class="card-header p-0 position-relative">
-              <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/bg-tool.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy">
-              </a>
-            </div>
-            <div class="card-body px-0">
-              <h5>
-                <a href="javascript:;" class="text-dark font-weight-bold">MateLabs machine learning</a>
-              </h5>
-              <p>
-                If you’ve ever wanted to train a machine learning model
-                and integrate it with IFTTT, you now can with ...
-              </p>
-              <a href="javascript:;" class="text-info text-sm icon-move-right">Read More
+              <a href="#" class="text-info text-sm icon-move-right">Read More
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
