--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -11,19 +11,12 @@
   <div class="container" style="margin-top:20%;">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center mx-auto my-auto">
-        <h1 class="text-white">Decode Manage Store Share.</h1>
+        <h2 class="text-white">Unlock the Science. Decode your Data.</h2>
         <p class="lead mb-4 text-white opacity-8">In depth analysis of geotechnical data focusing on valuable, project
           specific insights.
           Interpretation made easy so that you can draw meaningful decisions and turn geotechnical risk into a unique
           competitive advantage.
         </p>
-        <h6 class="text-white mb-2 mt-5">Find us on</h6>
-        <div class="d-flex justify-content-center">
-          <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4" aria-hidden="true"></i></a>
-          <a href="javascript:;"><i class="fab fa-instagram text-lg text-white me-4" aria-hidden="true"></i></a>
-          <a href="javascript:;"><i class="fab fa-twitter text-lg text-white me-4" aria-hidden="true"></i></a>
-          <a href="javascript:;"><i class="fab fa-google-plus text-lg text-white" aria-hidden="true"></i></a>
-        </div>
       </div>
     </div>
   </div>
@@ -37,32 +30,44 @@
           <div class="row justify-content-start">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">public</i>
-                <h5>Fully integrated</h5>
-                <p>We get insulted by others, lose trust for those We get back freezes</p>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">explore</i>
+                <h5>Decode</h5>
+                <p>On the fly, in depth analysis of large
+                  geotechnical data sets. Evaluate and view
+                  your data in a dynamic format, draw
+                  meaningful conclusions and limit
+                  geotechnical related risk for your projects.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">payments</i>
-                <h5>Payments functionality</h5>
-                <p>We get insulted by others, lose trust for those We get back freezes</p>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">manage</i>
+                <h5>Manage</h5>
+                <p>Manage your geodata in a
+                  completely new way. Forget PDF
+                  reports and manual data entries.</p>
               </div>
             </div>
           </div>
           <div class="row justify-content-start mt-4">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">apps</i>
-                <h5>Prebuilt components</h5>
-                <p>We get insulted by others, lose trust for those We get back freezes</p>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">payments</i>
+                <h5>Store</h5>
+                <p>Store your geodata with us and let
+                  deep data analysis turn your current
+                  data into knowledge. Gain a
+                  competitive advantage.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">3p</i>
-                <h5>Improved platform</h5>
-                <p>We get insulted by others, lose trust for those We get back freezes</p>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">share</i>
+                <h5>Share</h5>
+                <p>Seemingly share your data and dynamic
+                  reports with other users. Enable strong
+                  collaborations and transfer knowledge and
+                  insights with a click of a button.</p>
               </div>
             </div>
           </div>
@@ -81,11 +86,11 @@
               </h5>
               <p class="mb-0">
                 In depth analysis of geotechnical data focusing on valuable, project specific insights.
-              </p>
+              </p><br>
               <p class="mb-0">
                 Decode. Manage. Store. Share.
               </p>
-              <button type="button" class="btn bg-gradient-info btn-sm mb-0 mt-3">Geo-data platform</button>
+              <a href="{% url 'login' %}" class="btn bg-gradient-info btn-sm mb-0 mt-3">Geo-data platform</a>
             </div>
           </div>
         </div>
