--- a/apps/static/assets-landing/css/material-kit.css
+++ b/apps/static/assets-landing/css/material-kit.css
@@ -9304,7 +9304,7 @@ fieldset:disabled .btn {
 }
 
 .my-3 {
-  margin-top: 1rem !important;
+  /* margin-top: 1rem !important; */
   margin-bottom: 1rem !important;
 }
 
@@ -22209,7 +22209,7 @@ body.dark-version {
   color: #342229;
   display: flex;
   line-height: 1.25 !important;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .input-group.input-group-outline.is-focused .form-label:before,
@@ -23178,15 +23178,16 @@ hr.horizontal.gray-light {
 
 .navbar {
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffff;
 }
 
 .navbar .navbar-brand {
-  color: #344767;
+  color: #040404;
   font-size: 0.875rem;
 }
 
 .navbar .nav-link {
-  color: #344767;
+  color: #040404;
   padding: 0.5rem 1rem;
   font-weight: 400;
   font-size: 0.875rem;
