--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -1,9 +1,9 @@
 
 
-<nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
+<nav class="navbar navbar-expand-lg position-fixed top-0 z-index-3 w-100 my-3  ">
     <div class="container">
-      <a href="#home" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo-trans.png"
-          style="width: 12em;"></a>
+      <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo-trans.png"
+          style="width: 10rem;"></a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
         data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon mt-2">
