--- a/apps/templates/includes/project/projectmap.html
+++ b/apps/templates/includes/project/projectmap.html
@@ -2,14 +2,16 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body ">
-          <div id="detail-map" style="min-height:57vh;  max-height: 57vh; z-index: 0;">
+          <div id="detail-map" style="min-height:73vh;  max-height: 73vh; z-index: 0;">
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-6">
       <div class="card ">
-        <div class="table-responsive" style="min-height:15vh;  max-height: 18vh;">
+        <div class="table-responsive" style="min-height:22vh;  max-height: 22vh;">
+          <button class="btn btn-primary" onclick='window.location.href="{% url 'add-project-ags' project.id %}"'><i
+            class="material-icons">add</i> Add AGS</button>
           <table class="table" id="table_ags">
             <thead>
               <tr>
@@ -52,7 +54,7 @@
       </div>
       <div class="card">
         <div class="card-body">
-          <div class="table-responsive" style="min-height:35vh;  max-height: 37vh;">
+          <div class="table-responsive" style="min-height:48vh;  max-height: 48vh;">
             <table class="table table-striped" id="table_borehole">
               <thead>
                 <tr>
