--- a/apps/templates/includes/project/section.html
+++ b/apps/templates/includes/project/section.html
@@ -1,30 +1,58 @@
 <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-body ">
-          <div id="section-map" style="min-height:85vh;  max-height: 85vh; z-index: 0;">
-          </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body ">
+        <div id="section-map" style="min-height:48vh;  max-height: 48vh; z-index: 0;">
         </div>
       </div>
     </div>
-    <!-- <div class="col-md-3">
-      <div class="card">
-        <div class="card-body ">
-          <div class="input-group no-border">
-            <button class="btn btn-primary" id="drawChart-first-apply"><i class="material-icons">timeline</i> Chart 1</button>
-          </div>
-          <div id="drawSectionChart-first" style="width:100%; height: 81vh;"></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card">
-        <div class="card-body ">
-          <div class="input-group no-border">
-            <button class="btn btn-primary" id="drawChart-first-apply"><i class="material-icons">timeline</i> Chart 2</button>
-          </div>
-          <div id="drawSectionChart-second" style="width:100%; height: 81vh;"></div>
-        </div>
-      </div>
-    </div> -->
   </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <div class="table-responsive" style="min-height:48vh;  max-height: 48vh;">
+          <table class="table table-striped" id="table_borehole">
+            <thead>
+              <tr>
+                <th class="text-center">#</th>
+                <th>Project</th>
+                <th>Borehole</th>
+                <th>Longitude</th>
+                <th>Latitude</th>
+                <th>Existing GL</th>
+                <th>Water Level</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for hole in holetable %}
+              <tr>
+                <td class="text-center">{{ forloop.counter }} </td>
+                <td>{{ hole.ags }}</td>
+                <td>{{ hole.LOCA_ID }}</td>
+                <td>{{ hole.longitude }}</td>
+                <td>{{ hole.latitude }}</td>
+                <td>{{ hole.LOCA_GL }}</td>
+                <td>{{ hole.MOND_RDNG }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-body ">
+        <div class="input-group no-border">
+          <button class="btn btn-primary" id="drawChart-first-apply"><i class="material-icons">timeline</i> Draw Chart</button>
+        </div>
+        <div id="drawSectionChart-second" style="width:100%; height: 50vh;"></div>
+      </div>
+    </div>
+  </div>
+</div>
