--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -44,6 +44,8 @@
   <footer class="footer pt-5 mt-5">
     <div class="container">
       <div class=" row">
+        <div class="col-md-1 mb-4 ms-auto">
+        </div>
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="{% url 'landing' %}">
@@ -53,130 +55,71 @@
           </div>
           <div>
             <ul class="d-flex flex-row ms-n3 nav">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim/" target="_blank">
                   <i class="fab fa-facebook text-lg opacity-8"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://twitter.com/creativetim" target="_blank">
+                <a class="nav-link pe-1" href="https://www.linkedin.com/company/oryc" target="_blank">
                   <i class="fab fa-twitter text-lg opacity-8"></i>
                 </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link pe-1" href="https://dribbble.com/creativetim" target="_blank">
                   <i class="fab fa-dribbble text-lg opacity-8"></i>
                 </a>
-              </li>
-              <li class="nav-item">
+              </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link pe-1" href="https://github.com/creativetimofficial" target="_blank">
                   <i class="fab fa-github text-lg opacity-8"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.youtube.com/channel/UCVyTG4sCw-rOvB9oHkzZD1w"
+                <a class="nav-link pe-1" href="https://www.linkedin.com/company/oryc"
                   target="_blank">
-                  <i class="fab fa-youtube text-lg opacity-8"></i>
+                  <i class="fab fa-linkedin text-lg opacity-8"></i>
                 </a>
               </li>
             </ul>
           </div>
         </div>
-        <div class="col-md-2 col-sm-6 col-6 mb-4">
-          <div>
-            <h6 class="text-sm">Company</h6>
-            <ul class="flex-column ms-n3 nav">
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/presentation" target="_blank">
-                  About Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/templates/free" target="_blank">
-                  Freebies
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/templates/premium" target="_blank">
-                  Premium Tools
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/blog" target="_blank">
-                  Blog
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-2 col-sm-6 col-6 mb-4">
+        <div class="col-md-3 col-sm-6 col-6 mb-4">
           <div>
             <h6 class="text-sm">Resources</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://iradesign.io/" target="_blank">
-                  Illustrations
+                <a class="nav-link" href="{% url 'login' %}" target="_blank">
+                  Geo-Data Platform
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/bits" target="_blank">
-                  Bits & Snippets
+                <a class="nav-link" href="{% url 'login' %} target="_blank">
+                  Tools
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/affiliates/new" target="_blank">
-                  Affiliate Program
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-2 col-sm-6 col-6 mb-4">
-          <div>
-            <h6 class="text-sm">Help & Support</h6>
-            <ul class="flex-column ms-n3 nav">
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/contact-us" target="_blank">
+                <a class="nav-link" href="{% url 'login' %}" target="_blank">
                   Contact Us
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center" target="_blank">
-                  Knowledge Center
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://services.creative-tim.com/?ref=ct-mk2-footer" target="_blank">
-                  Custom Development
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/sponsorships" target="_blank">
-                  Sponsorships
-                </a>
-              </li>
             </ul>
           </div>
         </div>
-        <div class="col-md-2 col-sm-6 col-6 mb-4 me-auto">
+        <div class="col-md-3 col-sm-6 col-6 mb-4 me-auto">
           <div>
             <h6 class="text-sm">Legal</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/terms-of-service/"
+                <a class="nav-link" href="{% url 'login' %}"
                   target="_blank">
                   Terms & Conditions
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/privacy-policy/"
+                <a class="nav-link" href="{% url 'login' %}"
                   target="_blank">
                   Privacy Policy
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/license" target="_blank">
-                  Licenses (EULA)
                 </a>
               </li>
             </ul>
@@ -205,6 +148,20 @@
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="/static/assets-landing/js/material-kit.min.js?v=3.0.4" ></script>
+  <script>
+    window.onscroll = function() {myFunction()};
+    
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+    
+    function myFunction() {
+      if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+      } else {
+        navbar.classList.remove("sticky");
+      }
+    }
+    </script>
 </body>
 
 </html>
