--- a/apps/templates/pages/project/microags.html
+++ b/apps/templates/pages/project/microags.html
@@ -34,12 +34,9 @@
 
 <div class="col-md-12 col-12 mr-auto ml-auto">
     <div class="card">
-        <div class="card-header card-header-icon card-header-rose">
-            <h4 class="card-title ">Simple Table</h4>
-        </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table" id="datatable_permissions">
+                <table class="table" id="ags-table">
 
                 </table>
             </div>
@@ -57,12 +54,19 @@
     for (i = 0; i < headings.length; i++) {
         $('#select-heading').append($('<option>', { value: headings[i], text: headings[i] }));
     }
-</script>
-
-<script language="javascript">
-
+    var code = 'CORE'
     $(document).ready(function () {
-
+        $('#ags-table').DataTable({
+            'ajax': '{% url "ags-table" pid id %}',
+            'serverSide': true,
+            'processing': true,
+            'paging': true,
+            'searching': true,
+            'ordering': true,
+            'columns': [
+                { 'data': 'LOCA_ID' }
+            ]
+        });
     });
 
 </script>
