--- a/apps/templates/pages/project/report.html
+++ b/apps/templates/pages/project/report.html
@@ -2,6 +2,7 @@
 
 {% block title %} project Details {% endblock %}
 
+
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <!-- Link to Leaflet Stylesheet-->
@@ -10,17 +11,25 @@
 <link rel='stylesheet' href='/static/assets/css/leaflet/leaflet.fullscreen.css' />
 <link rel="stylesheet" href="/static/assets/css/leaflet/L.Control.Locate.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
-<link  href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css">
+<link href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="/static/custom/css/style.css" />
+
+<style>
+  ol {
+    display: inline;
+    padding-bottom: 5px;
+  }
+</style>
+
 {% endblock stylesheets %}
 
 {% block content %}
 
-{% include 'includes/project/projectmap.html' %}
-{% include 'includes/project/projectfilter.html' %}
-{% include 'includes/charts.html' %}
-{% include 'includes/profile/profileform.html' %}
-{% include 'includes/profile/defaultprofileform.html' %}
+
+
+{% include 'includes/project/report.html' %}
+
+
 
 {% endblock content %}
 
@@ -37,51 +46,32 @@
 <script src="/static/assets/js/core/highchart/exporting.js"></script>
 <script src="/static/assets/js/core/highchart/export-data.js"></script>
 <script src="/static/assets/js/core/highchart/accessibility.js"></script>
+<script src="https://code.highcharts.com/modules/pattern-fill.js"></script>
+<script src="https://code.highcharts.com/themes/high-contrast-light.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
 <script src="/static/assets/js/plugins/bootbox.min.js"></script>
 <script src="/static/custom/js/main.js"></script>
 <script src="/static/custom/js/chartData.js"></script>
 <script src="/static/custom/js/chart.js"></script>
 <script>
-    var headings = '{{headings|safe}}';
-    var holes = '{{hole|safe}}';
-    var projectname = '{{ project.name|safe }}'
-    var projectid = '{{ project.id|safe }}'
-    var headings = JSON.parse(headings);
-    var hole_data = JSON.parse(holes);
-    var hole_list = []
-    for (var key in hole_data) {
-      hole_list.push(key);
-    }
-    var modal = document.getElementById("myModal");
-    var btn = document.getElementById("myBtn");
-    var span = document.getElementsByClassName("close")[0];
+  var headings = '{{headings|safe}}';
+  var holes = '{{hole|safe}}';
+  var projectname = '{{ project.name|safe }}'
+  var projectid = '{{ project.id|safe }}'
+  var headings = JSON.parse(headings);
+  var hole_data = JSON.parse(holes);
+  var hole_list = []
+  for (var key in hole_data) {
+    hole_list.push(key);
+  }
 
-    var defaultmodal = document.getElementById("defaultprofileModal");
-    var btndefault = document.getElementById("defaultprofile");
-    var spandefault = document.getElementById("close-default-modal");
-
-    var chartdict = {};
-
-    btndefault.onclick = function() {
-      defaultmodal.style.display = "block";
-      $("#profileprojectiddefault").val(projectid);
-    }
-
-    spandefault.onclick = function() {
-      defaultmodal.style.display = "none";
-    }
 </script>
-<script src="/static/custom/js/project.js"></script>
 <script src="/static/custom/js/map.js"></script>
 
-
+<script src="/static/assets/js/core/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.js"></script>
 <script type="text/javascript">
-    $('#table_profile').DataTable();
-    $('#table_borehole').DataTable();
-    $('#table_ags').DataTable();
+  $('#table_borehole').DataTable();
 </script>
-
 
 {% endblock javascripts %}
